feat: 新增公告互动系统 & 请假审批系统（跨角色协作）
- 新增公告互动功能：管理员/教师发布公告，全体用户点赞评论
- 新增请假审批功能：学生提交→教师审批→管理员查看
- 新增3张数据库表：t_announcement, t_comment, t_leave
- 新增后端7个文件：3 Controller + 3 Entity + 3 Mapper + 3 Service
- 新增前端2个页面：Announcement.vue, Leave.vue
- 修复ElStatistic类型警告、学生菜单路由、错误处理
- 更新README.md：完整功能说明、API文档、跨角色交互图